defaulr role & Password

--- a/src/app/features/organisation-section/components/employee/employee.component.html
+++ b/src/app/features/organisation-section/components/employee/employee.component.html
@@ -366,7 +366,7 @@
                         <th class="px-1 py-1 border border-gray-200 text-center">Designation</th>
                         <th class="px-1 py-1 border border-gray-200 text-center">Manager</th>
                         <th class="px-1 py-1 border border-gray-200 text-center">Join Date</th>
-                        <th class="sticky right-0 z-10 px-1 py-1 border border-gray-200 text-center bg-gray-50">Actions</th>
+                        <th class="sticky right-0 px-1 py-1 border border-gray-200 text-center bg-gray-50">Actions</th>
                       </tr>
                     </thead>
                     <tbody>
